[TEST] gha k8s runner mode [DEVOPS-213]
Signed-off-by: Alexandre Nuttinck <alexandre.nuttinck@imio.be>

--- a/.github/workflows/docker-publish-base.yml
+++ b/.github/workflows/docker-publish-base.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   base:
-    runs-on: gha-runners-delib-py3
+    runs-on: gha-runners-test-k8s-mode
     steps:
       - name: Build and publish base image to harbor
         uses: IMIO/gha/build-push-notify@v3.9.3
