--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.19
+Products.PloneMeeting = 4.2.14rc2
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.12
+Products.MeetingCommunes = 4.2.10
 
 # Required by:
 # Products.PloneMeeting
@@ -49,7 +49,7 @@ imio.fpaudit = 0.1.2
 imio.helpers = 1.2.2
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.24
+imio.pm.locales = 4.2.20.4
 imio.prettylink = 1.22
 imio.pyutils = 1.1.2
 imio.webspellchecker = 1.0b7
