--- a/prod.cfg
+++ b/prod.cfg
@@ -11,6 +11,11 @@ parts +=
     instance-debug
     repozo
 
+auto-checkout =
+    Products.PloneMeeting
+    imio.pm.locales
+    imio.helpers
+
 [instance1]
 environment-vars += ${bigbang:environment-vars}
 
