Do not use buildout.environ for now Use Products.PloneMeeting = 4.2.20rc1 and imio.pm.locales = 4.2.24.1

--- a/base.cfg
+++ b/base.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 extensions =
-    buildout.environ
+#    buildout.environ
     mr.developer
 allow-picked-versions = false
 show-picked-versions = true
