--- a/sources.cfg
+++ b/sources.cfg
@@ -15,6 +15,7 @@ zopesvn = svn://svn.zope.org/repos/main/
 appy = git ${remotes:imio}/appy.git pushurl=${remotes:imio_push}/appy.git
 collective.behavior.internalnumber = git ${remotes:imio}/collective.behavior.internalnumber.git pushurl=${remotes:imio_push}/collective.behavior.internalnumber.git
 collective.behavior.talcondition = git ${remotes:collective}/collective.behavior.talcondition.git pushurl=${remotes:collective_push}/collective.behavior.talcondition.git
+collective.big.bang = git ${remotes:collective}/collective.big.bang.git pushurl=${remotes:collective_push}/collective.big.bang.git branch=1.x
 collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git
 collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
 collective.contact.core = git ${remotes:collective}/collective.contact.core.git pushurl=${remotes:collective_push}/collective.contact.core.git
@@ -37,7 +38,6 @@ collective.messagesviewlet = git ${remotes:collective}/collective.messagesviewle
 collective.querynextprev = git ${remotes:collective}/collective.querynextprev.git pushurl=${remotes:collective_push}/collective.querynextprev.git
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
 collective.solr = git ${remotes:collective}/collective.solr.git branch=master
-collective.big.bang = git ${remotes:collective}/collective.big.bang.git pushurl=${remotes:collective_push}/collective.big.bang.git branch=main
 
 communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
 ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.labels.git
