--- a/versions.cfg
+++ b/versions.cfg
@@ -52,7 +52,7 @@ imio.migrator = 1.34
 imio.pm.locales = 4.2.25
 imio.prettylink = 1.22
 imio.pyutils = 1.1.2
-imio.webspellchecker = 1.0b7
+imio.webspellchecker = 1.0
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
