Added imio.webspellchecker to auto-checkout and added definition (not enabled) for collective.quickupload

--- a/dev.cfg
+++ b/dev.cfg
@@ -47,6 +47,7 @@ auto-checkout =
     collective.js.iframeresizer
     collective.js.tooltipster
     collective.querynextprev
+#    collective.quickupload
     collective.big.bang
 #    collective.fingerpointing
 #    collective.upgrade
@@ -54,7 +55,7 @@ auto-checkout =
     ftw.labels
     imio.pm.locales
     imio.pm.ws
-#    imio.webspellchecker
+    imio.webspellchecker
     imio.zamqp.core
     imio.zamqp.pm
     plone.restapi
