--- a/sources.cfg
+++ b/sources.cfg
@@ -36,6 +36,7 @@ collective.js.iframeresizer = git ${remotes:collective}/collective.js.iframeresi
 collective.js.tooltipster = git ${remotes:collective}/collective.js.tooltipster.git pushurl=${remotes:collective_push}/collective.js.tooltipster.git
 collective.messagesviewlet = git ${remotes:collective}/collective.messagesviewlet.git pushurl=${remotes:collective_push}/collective.messagesviewlet.git
 collective.querynextprev = git ${remotes:collective}/collective.querynextprev.git pushurl=${remotes:collective_push}/collective.querynextprev.git
+collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git
 collective.upgrade = git ${remotes:collective}/collective.upgrade.git pushurl=${remotes:collective_push}/collective.upgrade.git
 collective.solr = git ${remotes:collective}/collective.solr.git branch=master
 
