Use branch=3.x for collective.documentgenerator

--- a/sources.cfg
+++ b/sources.cfg
@@ -22,7 +22,7 @@ collective.contact.core = git ${remotes:collective}/collective.contact.core.git 
 collective.contact.plonegroup = git ${remotes:collective}/collective.contact.plonegroup.git pushurl=${remotes:collective_push}/collective.contact.plonegroup.git
 collective.contact.widget = git ${remotes:collective}/collective.contact.widget.git pushurl=${remotes:collective_push}/collective.contact.widget.git
 collective.dms.scanbehavior = git ${remotes:collective}/collective.dms.scanbehavior.git pushurl=${remotes:collective_push}/collective.dms.scanbehavior.git
-collective.documentgenerator = git ${remotes:collective}/collective.documentgenerator.git pushurl=${remotes:collective_push}/collective.documentgenerator.git
+collective.documentgenerator = git ${remotes:collective}/collective.documentgenerator.git pushurl=${remotes:collective_push}/collective.documentgenerator.git branch=3.x
 collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.batchactions.git pushurl=${remotes:imio_push}/collective.eeafaceted.batchactions.git
 collective.eeafaceted.collectionwidget = git ${remotes:collective}/collective.eeafaceted.collectionwidget.git pushurl=${remotes:collective_push}/collective.eeafaceted.collectionwidget.git
 collective.eeafaceted.dashboard = git ${remotes:collective}/collective.eeafaceted.dashboard.git pushurl=${remotes:collective_push}/collective.eeafaceted.dashboard.git
