--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.24.1
+Products.PloneMeeting = 4.2.24.2
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.13
@@ -16,11 +16,11 @@ appy = 1.0.18
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
 collective.behavior.internalnumber = 0.4
-collective.behavior.talcondition = 1.0a1
+collective.behavior.talcondition = 1.1.1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
 collective.contact.core = 1.43.1
-collective.contact.plonegroup = 1.54
+collective.contact.plonegroup = 1.55
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.45
@@ -49,7 +49,7 @@ imio.fpaudit = 0.1.2
 imio.helpers = 1.3.0
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.26
+imio.pm.locales = 4.2.27
 imio.prettylink = 1.23
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
@@ -59,7 +59,7 @@ plone.formwidget.masterselect = 1.7
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
 plonetheme.imioapps = 2.52
-Products.CPUtils = 1.25
+Products.CPUtils = 1.26
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
 simplejson = 3.13.2
