--- a/base.cfg
+++ b/base.cfg
@@ -70,6 +70,12 @@ environment-vars =
     DEFAULT_LANGUAGE fr
     SITE_ID ${port:plone-path}
     ADMIN_PASSWORD ${port:admin-password}
+    VISION_AUTH_URL ${port:vision-auth-url}
+    VISION_CLIENT_ID ${port:vision-client-id}
+    VISION_CLIENT_SECRET ${port:vision-client-secret}
+    VISION_API_URL ${port:vision-api-url}
+    VISION_AUTH_USERNAME ${port:visiton-auth-username}
+    VISION_AUTH_PASSWORD ${port:vision-auth-password}
 
 [instance1]
 #effective-user =
@@ -107,13 +113,6 @@ event-log-custom =
         path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
         level INFO
     </logfile>
-    <syslog>
-        address ${port:logs-server}
-        facility local3
-        format %(asctime)s ${facts:hostname} zope[%(process)s]: ${port:cluster} ${:_buildout_section_name_} [%(levelname)s] %(name)s | %(message)s
-        dateformat %b %d %H:%M:%S
-        level info
-    </syslog>
 
 environment-vars =
   PYTHON_EGG_CACHE ${buildout:directory}/python-eggs
