Use branch 1.x for collective.excelexport

--- a/sources.cfg
+++ b/sources.cfg
@@ -26,7 +26,7 @@ collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.b
 collective.eeafaceted.collectionwidget = git ${remotes:collective}/collective.eeafaceted.collectionwidget.git pushurl=${remotes:collective_push}/collective.eeafaceted.collectionwidget.git
 collective.eeafaceted.dashboard = git ${remotes:collective}/collective.eeafaceted.dashboard.git pushurl=${remotes:collective_push}/collective.eeafaceted.dashboard.git
 collective.eeafaceted.z3ctable = git ${remotes:collective}/collective.eeafaceted.z3ctable.git pushurl=${remotes:collective_push}/collective.eeafaceted.z3ctable.git
-collective.excelexport = git ${remotes:collective}/collective.excelexport.git pushurl=${remotes:collective_push}/collective.excelexport.git
+collective.excelexport = git ${remotes:collective}/collective.excelexport.git pushurl=${remotes:collective_push}/collective.excelexport.git branch=1.x
 collective.fingerpointing = git ${remotes:collective}/collective.fingerpointing.git pushurl=${remotes:collective_push}/collective.fingerpointing.git
 collective.fontawesome = git ${remotes:collective}/collective.fontawesome.git pushurl=${remotes:collective_push}/collective.fontawesome.git
 collective.iconifiedcategory = git ${remotes:collective}/collective.iconifiedcategory.git pushurl=${remotes:collective_push}/collective.iconifiedcategory.git
