Renamed vision-auth to vision-auth-url

--- a/port.cfg
+++ b/port.cfg
@@ -34,7 +34,7 @@ python-uno = /usr/bin/python3
 zodb-cache-size = 100000
 zeo-client-cache-size = 1000MB
 public-url = http://localhost:8081/Plone
-vision-auth = https://auth.imio-app.be/realms/vision/protocol/openid-connect/token
+vision-auth-url = https://auth.imio-app.be/realms/vision/protocol/openid-connect/token
 vision-client-id = vision
 vision-client-secret = secret
 vision-api-url = https://api.imio.be/imio/vision/v1/
