--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.26
+Products.PloneMeeting = 4.2.27rc1
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.15
@@ -49,7 +49,7 @@ imio.fpaudit = 0.1.2
 imio.helpers = 1.3.2
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.30
+imio.pm.locales = 4.2.31rc1
 imio.prettylink = 1.23
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
