Use ZSI = 2.1a2+imio2

--- a/versions.cfg
+++ b/versions.cfg
@@ -177,7 +177,7 @@ zc.recipe.cmmi = 2.0.0
 
 #Required by:
 #imio.pm.ws
-ZSI = 2.1a2-imio1
+ZSI = 2.1a2+imio2
 z3c.soap = 0.5.5
 BeautifulSoup = 3.2.1
 python-magic = 0.4.6
