Environment variable `MUNICIPALITY_ID` is actually `VISION_MUNICIPALITY_ID`.

--- a/base.cfg
+++ b/base.cfg
@@ -124,7 +124,7 @@ environment-vars =
     VISION_API_URL ${port:vision-api-url}
     VISION_AUTH_USERNAME ${port:vision-auth-username}
     VISION_AUTH_PASSWORD ${port:vision-auth-password}
-    MUNICIPALITY_ID ${port:municipality-id}
+    VISION_MUNICIPALITY_ID ${port:vision-municipality-id}
 
 eggs =
     ${buildout:eggs}
