--- a/port.cfg
+++ b/port.cfg
@@ -40,4 +40,4 @@ vision-client-secret = secret
 vision-api-url = https://api.imio.be/imio/vision/v1/
 vision-auth-username =
 vision-auth-password =
-municipality-id =
+vision-municipality-id =
