--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.27.4
+Products.PloneMeeting = 4.2.28rc1
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.15
@@ -24,7 +24,7 @@ collective.contact.plonegroup = 1.55
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.45
-collective.eeafaceted.batchactions = 1.16.5
+collective.eeafaceted.batchactions = 1.16.6
 collective.eeafaceted.collectionwidget = 1.17
 collective.eeafaceted.dashboard = 0.20
 collective.eeafaceted.z3ctable = 2.29
@@ -46,10 +46,10 @@ imio.annex = 2.25
 imio.actionspanel = 1.70
 imio.dashboard = 2.12
 imio.fpaudit = 0.1.2
-imio.helpers = 1.3.3
+imio.helpers = 1.3.7
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.31
+imio.pm.locales = 4.2.32rc1
 imio.prettylink = 1.23
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
@@ -72,7 +72,7 @@ six = 1.16.0
 #imio.annex
 collective.dms.scanbehavior = 1.3.0
 collective.fontawesome = 1.1
-collective.iconifiedcategory = 0.69
+collective.iconifiedcategory = 0.70
 collective.js.tooltipster = 1.8
 icalendar = 3.11
 z3c.jbot = 0.7.2
@@ -229,7 +229,7 @@ collective.prometheus = 1.6.0
 # AMQP
 imio.dataexchange.core = 0.2
 collective.zamqp = 0.16.1
-imio.zamqp.core = 0.7
+imio.zamqp.core = 0.10
 imio.zamqp.pm = 0.18
 reportlab = 3.4.0
 PyPDF2 = 1.26.0
