Use Products.MeetingCommunes = 4.2.16rc1

--- a/versions.cfg
+++ b/versions.cfg
@@ -8,7 +8,7 @@ mr.developer = 2.0.2
 Products.PloneMeeting = 4.2.28rc2
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.15
+Products.MeetingCommunes = 4.2.16rc1
 
 # Required by:
 # Products.PloneMeeting
