Prepare experimental release for seraing

--- a/seraing.cfg
+++ b/seraing.cfg
@@ -3,12 +3,24 @@
 extends =
     prod.cfg
 
+auto-checkout =
+    Products.PloneMeeting
+    Products.MeetingCommunes
+    Products.MeetingSeraing
+    imio.pm.locales
+
 [instance1]
 eggs +=
     Products.MeetingSeraing
 
 zcml +=
     Products.MeetingSeraing
+
+[sources]
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=SUP-47770_before_last_back_to_proposed
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
+imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git branch=SUP-47770_before_last_back_to_proposed
 
 [versions]
 Products.MeetingSeraing = 4.2.12
