Checkout everything from dev.cfg

--- a/seraing.cfg
+++ b/seraing.cfg
@@ -8,6 +8,44 @@ auto-checkout =
     Products.MeetingCommunes
     Products.MeetingSeraing
     imio.pm.locales
+    imio.actionspanel
+    imio.annex
+    imio.dashboard
+    imio.fpaudit
+    imio.helpers
+    imio.history
+    imio.migrator
+    imio.prettylink
+    imio.pyutils
+    imio.restapi
+    collective.behavior.internalnumber
+    collective.behavior.talcondition
+    collective.compoundcriterion
+    collective.contact.core
+    collective.contact.plonegroup
+    collective.contact.widget
+    collective.documentgenerator
+    collective.dms.scanbehavior
+    collective.eeafaceted.batchactions
+    collective.eeafaceted.collectionwidget
+    collective.eeafaceted.dashboard
+    collective.eeafaceted.z3ctable
+    collective.iconifiedcategory
+    collective.messagesviewlet
+    collective.js.fancytree
+    collective.js.iframeresizer
+    collective.js.tooltipster
+    collective.querynextprev
+    collective.big.bang
+    ftw.labels
+    imio.pm.ws
+    imio.webspellchecker
+    imio.zamqp.core
+    imio.zamqp.pm
+    plone.restapi
+    plonemeeting.restapi
+    plonetheme.imioapps
+    Products.CPUtils
 
 [instance1]
 eggs +=
