--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.28rc3
+Products.PloneMeeting = 4.2.27.5
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.16rc1
+Products.MeetingCommunes = 4.2.15
 
 # Required by:
 # Products.PloneMeeting
@@ -42,14 +42,14 @@ dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
-imio.annex = 2.25
+imio.annex = 2.26
 imio.actionspanel = 1.70
 imio.dashboard = 2.12
 imio.fpaudit = 0.1.2
-imio.helpers = 1.3.7
+imio.helpers = 1.3.8
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.32rc3
+imio.pm.locales = 4.2.31
 imio.prettylink = 1.23
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
@@ -70,7 +70,7 @@ six = 1.16.0
 
 #Required by:
 #imio.annex
-collective.dms.scanbehavior = 1.3.0
+collective.dms.scanbehavior = 1.3.2
 collective.fontawesome = 1.1
 collective.iconifiedcategory = 0.71
 collective.js.tooltipster = 1.8
@@ -229,8 +229,8 @@ collective.prometheus = 1.6.0
 # AMQP
 imio.dataexchange.core = 0.2
 collective.zamqp = 0.16.1
-imio.zamqp.core = 0.10
-imio.zamqp.pm = 0.18
+imio.zamqp.core = 0.11
+imio.zamqp.pm = 0.19
 reportlab = 3.4.0
 PyPDF2 = 1.26.0
 
