--- a/versions.cfg
+++ b/versions.cfg
@@ -49,7 +49,7 @@ imio.fpaudit = 0.1.2
 imio.helpers = 1.3.8
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.31
+imio.pm.locales = 4.2.32rc3
 imio.prettylink = 1.23
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
