--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.28.1
+Products.PloneMeeting = 4.2.28.2
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.16
@@ -49,8 +49,8 @@ imio.fpaudit = 0.1.2
 imio.helpers = 1.3.8
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.32rc3
-imio.prettylink = 1.23
+imio.pm.locales = 4.2.32
+imio.prettylink = 1.24
 imio.pyutils = 1.1.4
 imio.webspellchecker = 1.1
 natsort = 6.2.1
