Pinned shortuuid = 0.5.0 for imio.pyutils

--- a/versions.cfg
+++ b/versions.cfg
@@ -62,6 +62,7 @@ plonetheme.imioapps = 2.55
 Products.CPUtils = 1.26
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
+shortuuid = 0.5.0
 simplejson = 3.13.2
 vobject = 0.9.5
 z3c.unconfigure = 1.1
