SSO/Vision var env name changed

--- a/base.cfg
+++ b/base.cfg
@@ -118,13 +118,12 @@ environment-vars =
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
     RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
-    VISION_AUTH_URL ${port:vision-auth-url}
-    VISION_CLIENT_ID ${port:vision-client-id}
-    VISION_CLIENT_SECRET ${port:vision-client-secret}
+    SSO_AUTH_URL ${port:sso-auth-url}
+    SSO_AUTH_USERNAME ${port:sso-auth-username}
+    SSO_AUTH_PASSWORD ${port:sso-auth-password}
+    SSO_CLIENT_ID ${port:sso-client-id}
+    SSO_CLIENT_SECRET ${port:sso-client-secret}
     VISION_API_URL ${port:vision-api-url}
-    VISION_AUTH_USERNAME ${port:vision-auth-username}
-    VISION_AUTH_PASSWORD ${port:vision-auth-password}
-    VISION_MUNICIPALITY_ID ${port:vision-municipality-id}
 
 eggs =
     ${buildout:eggs}
@@ -133,7 +132,7 @@ eggs =
     Products.DocFinderTab
     Products.PloneMeeting
 # backward compat, to be removed after buildout.pm 4.1.17 is released
-    Products.PloneMeeting[amqp]
+    Products.PloneMeeting
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
