--- a/port.cfg
+++ b/port.cfg
@@ -34,10 +34,9 @@ python-uno = /usr/bin/python3
 zodb-cache-size = 100000
 zeo-client-cache-size = 1000MB
 public-url = http://localhost:8081/Plone
-vision-auth-url = https://auth.imio-app.be/realms/vision/protocol/openid-connect/token
-vision-client-id = vision
-vision-client-secret = secret
+sso-auth-url = https://auth.imio-app.be/realms/sso-apps/protocol/openid-connect/token
+sso-client-id = imio-delib
+sso-client-secret = secret
 vision-api-url = https://api.imio.be/imio/vision/v1/
-vision-auth-username =
-vision-auth-password =
-vision-municipality-id =
+sso-auth-username =
+sso-auth-password =
