Use same var env names everywhere

--- a/base.cfg
+++ b/base.cfg
@@ -118,11 +118,11 @@ environment-vars =
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
     RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
-    SSO_AUTH_URL ${port:sso-auth-url}
-    SSO_AUTH_USERNAME ${port:sso-auth-username}
-    SSO_AUTH_PASSWORD ${port:sso-auth-password}
-    SSO_CLIENT_ID ${port:sso-client-id}
-    SSO_CLIENT_SECRET ${port:sso-client-secret}
+    SSO_APPS_URL ${port:sso-auth-url}
+    SSO_APPS_CLIENT_ID ${port:sso-client-id}
+    SSO_APPS_CLIENT_SECRET ${port:sso-client-secret}
+    SSO_APPS_USER_USERNAME ${port:sso-auth-username}
+    SSO_APPS_USER_PASSWORD ${port:sso-auth-password}
     VISION_API_URL ${port:vision-api-url}
 
 eggs =
