Configure for imio.esign

--- a/base.cfg
+++ b/base.cfg
@@ -124,6 +124,8 @@ environment-vars =
     SSO_APPS_USER_USERNAME ${port:sso-auth-username}
     SSO_APPS_USER_PASSWORD ${port:sso-auth-password}
     VISION_API_URL ${port:vision-api-url}
+    ESIGN_ROOT_URL https://api-staging.imio.be
+    ESIGN_CREDENTIALS aWFleGFtcGxlOmFkbWlu
 
 eggs =
     ${buildout:eggs}
