--- a/versions.cfg
+++ b/versions.cfg
@@ -5,7 +5,7 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.2
 
-Products.PloneMeeting = 4.2.28.8
+Products.PloneMeeting = 4.2.29rc1
 
 # profile specific versions
 Products.MeetingCommunes = 4.2.16
@@ -45,20 +45,21 @@ ftw.labels = 2.0.1
 imio.annex = 2.26
 imio.actionspanel = 1.70
 imio.dashboard = 2.12
+imio.esign = 1.0a2
 imio.fpaudit = 0.1.2
 imio.helpers = 1.3.10
 imio.history = 1.36
 imio.migrator = 1.34
-imio.pm.locales = 4.2.33
+imio.pm.locales = 4.2.34rc1
 imio.prettylink = 1.24
-imio.pyutils = 1.1.4
+imio.pyutils = 1.2.1
 imio.webspellchecker = 1.1
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.55
+plonetheme.imioapps = 2.57
 Products.CPUtils = 1.26
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
